force-app/main/default/objects/Opportunity_Answers__c/Opportunity_Answers__c.object-meta.xml
<CustomObject>
    <label>Opportunity Answer</label>
    <nameField>
        <label>Opportunity Answer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>