force-app/main/default/objects/Opportunity_Answers__c/fields/Opportunity_Question__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Question</label>
    <referenceTo>Opportunity_Questions__c</referenceTo>
    <relationshipLabel>Opportunity Answers</relationshipLabel>
    <relationshipName>Opportunity_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>