force-app/main/default/objects/Opportunity_Answers__c/fields/Product_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Class__c</fullName>
    <label>Product Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>